/r/List.of/Arrays.asList/g